feat: implement Azure deployment setup and enhance CORS configuration